testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment14.errors.txt
use.js(1,12): error TS2503: Cannot find namespace 'Outer'.
use.js(5,22): error TS2339: Property 'Inner' does not exist on type '{}'.
work.js(1,7): error TS2339: Property 'Inner' does not exist on type '{}'.
work.js(2,7): error TS2339: Property 'Inner' does not exist on type '{}'.


==== def.js (0 errors) ====
    var Outer = {};
    
==== work.js (2 errors) ====
    Outer.Inner = function () {}
          ~~~~~
!!! error TS2339: Property 'Inner' does not exist on type '{}'.
    Outer.Inner.prototype = {
          ~~~~~
!!! error TS2339: Property 'Inner' does not exist on type '{}'.
        x: 1,
        m() { }
    }
    
==== use.js (2 errors) ====
    /** @type {Outer.Inner} */
               ~~~~~
!!! error TS2503: Cannot find namespace 'Outer'.
    var inner
    inner.x
    inner.m()
    var inno = new Outer.Inner()
                         ~~~~~
!!! error TS2339: Property 'Inner' does not exist on type '{}'.
    inno.x
    inno.m()
    
    
    